fixed marker list scroll bar when window becomes too short

--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ li:hover {
   position: absolute;
   left: 80%;
   width: 20%;
-  height: 100%;
+  height: 80%;
   display: none;
   overflow: auto;
   border-top: solid;
